[project]
name = "comfyui-image-hold-last"
description = "Image passthrough node that holds last value when upstream is bypassed"
version = "1.0.0"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/SeBL4RD/Image-Hold_Last"

[tool.comfy]
PublisherId = "sebl4rd"
DisplayName = "Image Hold Last"